--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ body {
 
 body {
   background: #111111;
-  font-family: "metropolis-regular", sans-serif;
+  font-family: "open san-serif", sans-serif;
   font-size: 1.7rem;
   font-style: normal;
   font-weight: normal;
@@ -95,7 +95,7 @@ a:active {
  * 
  * ------------------------------------------------------------------- */
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "domine-regular", serif;
+  font-family: "san-serif", serif;
   color: #000000;
   font-style: normal;
   font-weight: normal;
