--- a/css/main.css
+++ b/css/main.css
@@ -171,7 +171,7 @@ p img {
 }
 
 p.lead {
-  font-family: "metropolis-light", sans-serif;
+  font-family: sans-serif;
   font-size: 2rem;
   font-weight: 300;
   line-height: 1.8;
